--- a/zou.html
+++ b/zou.html
@@ -15,7 +15,7 @@
 <main>
 
 <h2>ИНТЕРЕСНЫЕ ФАКТЫ ПРО:</h2>
-<img src="p.jpg"/>
+<img src="p.jpg" height="200px"/>
 <p>Домашние кошки давно заняли свое место рядом с человеком и для многих стали любимыми питомцами и компаньонами. Но если вы думаете, что знаете своего кота как самого себя — уверяем: у него есть, чем вас удивить. В этой статье мы собрали интересные и необычные факты о домашних кошках, которые раскроют этих животных с разных, порой неожиданных сторон.
 Ученые предполагают, что кошки и собаки произошли от одного предка — мелких хищников из вида Miacidae, живших в основном на деревьях примерно 66 миллионов лет назад.</p>
 </main>
