--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <head>
             <title>ZOO</title>
             <link rel="stylesheet" href="style.css"/>
+                <meta name="google-site-verification" content="o4AI9hZN4-vGR4uRxl7nG-WVU2MKd3gLfMgYC8pj0MQ" />
         </head>
 <body>
 
